--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,10 +58,6 @@
                 android:screenOrientation="portrait"
                 android:theme="@android:style/Theme.Holo.Light"
                 android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity
                 android:theme="@android:style/Theme.Holo.Light"
@@ -82,6 +78,12 @@
 
 
                 android:name=".ShowActivity"/>
+        <activity android:name=".StartActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
         <!-- sdk服务 -->
         <service android:name="com.lef.ibeacon.service.UpdateService" />
         <service
